[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/Inventory/inventory_back_arrow.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Inventory/inventorygrid_research.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Inventory/inventory_next_arrow.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/RecipeSlotUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/UI/CraftingBookUI.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Inventory/inventory_selectcursor1.png" type="Texture" id=6]

[node name="CraftingBookUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 44.0
margin_top = 28.0
margin_right = 428.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookBackground" type="TextureRect" parent="MarginContainer"]
margin_right = 384.0
margin_bottom = 216.0
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTurning" type="HBoxContainer" parent="MarginContainer/BookBackground"]
margin_left = 60.0
margin_top = 152.0
margin_right = 324.0
margin_bottom = 161.0
custom_constants/separation = 94
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="MarginContainer/BookBackground/PageTurning"]
margin_right = 85.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
flip_h = true

[node name="RightButton" type="TextureButton" parent="MarginContainer/BookBackground/PageTurning"]
margin_left = 179.0
margin_right = 264.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Recipes" type="HBoxContainer" parent="MarginContainer/BookBackground"]
margin_left = 72.0
margin_top = 36.0
margin_right = 312.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 138
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="VBoxContainer" parent="MarginContainer/BookBackground/Recipes"]
margin_bottom = 113.0
rect_pivot_offset = Vector2( -188, 63 )
custom_constants/separation = 19

[node name="RecipeSlotUI1" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_right = 0.0

[node name="RecipeSlotUI2" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_top = 19.0
margin_right = 0.0
margin_bottom = 19.0

[node name="RecipeSlotUI3" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_top = 38.0
margin_right = 0.0
margin_bottom = 38.0

[node name="RecipeSlotUI4" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_top = 57.0
margin_right = 0.0
margin_bottom = 57.0

[node name="RecipeSlotUI5" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_top = 76.0
margin_right = 0.0
margin_bottom = 76.0

[node name="RecipeSlotUI6" parent="MarginContainer/BookBackground/Recipes/Row1" instance=ExtResource( 4 )]
margin_top = 95.0
margin_right = 0.0
margin_bottom = 95.0

[node name="Row2" type="VBoxContainer" parent="MarginContainer/BookBackground/Recipes"]
margin_left = 138.0
margin_right = 138.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( -188, 63 )
custom_constants/separation = 19

[node name="RecipeSlotUI7" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_right = 0.0
isRecipeDescription = true

[node name="RecipeSlotUI8" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_top = 19.0
margin_right = 0.0
margin_bottom = 19.0
isRecipeDescription = true

[node name="RecipeSlotUI9" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_top = 38.0
margin_right = 0.0
margin_bottom = 38.0
isRecipeDescription = true

[node name="RecipeSlotUI10" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_top = 57.0
margin_right = 0.0
margin_bottom = 57.0
isRecipeDescription = true

[node name="RecipeSlotUI11" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_top = 76.0
margin_right = 0.0
margin_bottom = 76.0
isRecipeDescription = true

[node name="RecipeSlotUI12" parent="MarginContainer/BookBackground/Recipes/Row2" instance=ExtResource( 4 )]
margin_top = 95.0
margin_right = 0.0
margin_bottom = 95.0
isRecipeDescription = true

[node name="PlayerSelection" type="HBoxContainer" parent="MarginContainer/BookBackground"]
margin_left = 69.0
margin_top = 40.0
margin_right = 309.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 131
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="VBoxContainer" parent="MarginContainer/BookBackground/PlayerSelection"]
margin_right = 7.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( -188, 63 )
custom_constants/separation = 10

[node name="PlayerSelection1" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="PlayerSelection2" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 19.0
margin_right = 7.0
margin_bottom = 28.0
texture = ExtResource( 6 )

[node name="PlayerSelection3" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 7.0
margin_bottom = 47.0
texture = ExtResource( 6 )

[node name="PlayerSelection4" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 57.0
margin_right = 7.0
margin_bottom = 66.0
texture = ExtResource( 6 )

[node name="PlayerSelection5" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 7.0
margin_bottom = 85.0
texture = ExtResource( 6 )

[node name="PlayerSelection6" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 95.0
margin_right = 7.0
margin_bottom = 104.0
texture = ExtResource( 6 )

[node name="Row2" type="VBoxContainer" parent="MarginContainer/BookBackground/PlayerSelection"]
margin_left = 138.0
margin_right = 145.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( -188, 63 )
custom_constants/separation = 10

[node name="PlayerSelection7" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="PlayerSelection8" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 19.0
margin_right = 7.0
margin_bottom = 28.0
texture = ExtResource( 6 )

[node name="PlayerSelection9" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 7.0
margin_bottom = 47.0
texture = ExtResource( 6 )

[node name="PlayerSelection10" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 57.0
margin_right = 7.0
margin_bottom = 66.0
texture = ExtResource( 6 )

[node name="PlayerSelection11" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 7.0
margin_bottom = 85.0
texture = ExtResource( 6 )

[node name="PlayerSelection12" type="TextureRect" parent="MarginContainer/BookBackground/PlayerSelection/Row2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 95.0
margin_right = 7.0
margin_bottom = 104.0
texture = ExtResource( 6 )

[node name="InventoryChecker" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="InventoryChecker" to="." method="_on_InventoryChecker_timeout"]
